backend/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: backend
  labels:
    app: backend-deploy
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: backend-deploy
